--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,21 @@
 [package]
 name = "zellij-nucleo"
-version = "0.1.0"
+version = "0.0.1"
+authors = ["Jesse Luehrs <doy@tozt.net>"]
 edition = "2021"
 
+description = "nucleo-based picker library for zellij plugins"
+repository = "https://git.tozt.net/zellij-nucleo"
+readme = "README.md"
+keywords = ["zellij"]
+categories = []
+license = "MIT"
+include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
+
 [dependencies]
+owo-colors = "3.5.0"
+nucleo-matcher = "0.3.1"
+serde = "1.0.217"
+serde_json = "1.0.134"
+unicode-width = "0.1.14"
+zellij-tile = "0.41.1"
